--- a/biographie.html
+++ b/biographie.html
@@ -25,22 +25,18 @@
 
   <header>
     <nav>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+      <ul id="menu">
+        <li><a href="index.html">index</a></li>
+        <li><a href="article.html">article</a></li>
+        <li><a href="biographie.html">biographie</a></li>
       </ul>
     </nav>
 
     <section>
       <div>
-        <img src="" alt="">
+        <img src="img/logo smith.png" alt="le logo du site">
       </div>
-      <h1></h1>
-      <h2></h2>
+      <h1>blog</h1>
     </section>
   </header>
 
@@ -63,7 +59,7 @@
       <li><img src="" alt=""></li>
       <li><img src="" alt=""></li>
     </ul>
-      <p>Email:<a href="mailto:duponcheelquentin.pro@gmail.com">duponcheelquentin.pro@gmail.com</a></p>
+      <p>Email:<a href="mailto:duponcheelquentin.pro@gmail.com" title="Email">duponcheelquentin.pro@gmail.com</a></p>
   </footer>
 
   <!-- end of footer part -->
