--- a/article.html
+++ b/article.html
@@ -26,9 +26,9 @@
  <header>
     <nav>
       <ul id="menu">
-        <li><a href="index.html">index</a></li>
-        <li><a href="article.html">article</a></li>
-        <li><a href="biographie.html">biographie</a></li>
+        <li class="mots"><a href="index.html">index</a></li>
+        <li class="mots"><a href="article.html">article</a></li>
+        <li class="mots"><a href="biographie.html">biographie</a></li>
       </ul>
     </nav>
 
