--- a/article.html
+++ b/article.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="fontawesome-free-5.0.13/web-fonts-with-css/css/fontawesome-all.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
 
   <!-- start of header -->
 
- <header>
+<header>
     <nav>
       <ul id="menu">
         <li class="mots"><a href="index.html">index</a></li>
@@ -36,7 +37,7 @@
       <div>
         <img src="img/logo smith.png" alt="le logo du site">
       </div>
-      <h1>blog de M.smith</h1>
+      <h1>M.Smith's blog</h1>
     </section>
   </header>
 
@@ -53,13 +54,13 @@
 
   <!-- start of footer part -->
 
-  <footer>
-    <ul>
-      <li><img src="" alt=""></li>
-      <li><img src="" alt=""></li>
-      <li><img src="" alt=""></li>
+  <footer class="foot">
+    <ul id="icon-reseaux">
+      <li><a href="https://twitter.com/quentin83526037?lang=fr" class="reseaux twitter"><i class="fab fa-twitter"></i></a></li>
+      <li><a href="https://github.com/duponcheel-quentin" class="reseaux github"><i class="fab fa-github"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/quentin-duponcheel-091951164" class="reseaux linkedin"><i class="fab fa-linkedin-in"></i></a></li>
     </ul>
-      <p>Email:<a href="mailto:duponcheelquentin.pro@gmail.com" title="Email">duponcheelquentin.pro@gmail.com</a></p>
+      <p class="Email">Contact:<a href="mailto:duponcheelquentin.pro@gmail.com" title="Email">duponcheelquentin.pro@gmail.com</a></p>
   </footer>
 
   <!-- end of footer part -->
