--- a/index.html
+++ b/index.html
@@ -46,26 +46,15 @@
   <!-- start of main part -->
 
   <main>
-    <article>
-      <h2>Welcome to my world!</h2>
-      <p>If you ever try to decrypt it, take the white pill it's doliprane... You're gonna need it.</p>
-    </article>
-
-    <article>
-        <img id="ban1" src="img/banniere3.jpg" alt="Wake up">
-        <a href="article.html"><img id="lapin2" src="img/lapin2.png" alt="lapin"></a>
-    </article>
-      
-    <article>
-        <img id="ban2" src="img/banniere2.jpg" alt="open the door">
-        <a href="arcticle.html"><img id="door" src="img/door2.png" alt="door"></a>
-    </article>
-
-    <article>
-      <img src="" alt="">
-      <a href=""><img src="" alt=""></a>
-    </article>
-      
+    <article class="ban">
+      <div class="word">
+        <h2>Welcome to my world!</h2>
+        <p>If you ever try to decrypt it, take the white pill it's doliprane... You're gonna need it.</p>
+      </div>
+      <a href="article.html"><img id="ban1" src="img/ban1.jpg" alt="banniere rabbit"></a>
+      <a href="article.html"><img id="ban2" src="img/ban2.jpg" alt="banniere door"></a>
+      <a href="article.html"><img id="ban3" src="img/ban3.jpg" alt="banniere smith"></a> 
+    </article>      
   </main>
 
   <!-- end of main part -->
