--- a/biographie.html
+++ b/biographie.html
@@ -33,21 +33,22 @@
       </ul>
     </nav>
 
-    <section>
-      <div>
-        <img src="img/logo smith.png" alt="le logo du site">
-      </div>
-      <h1>M.Smith's blog</h1>
-    </section>
-  </header>
-
   <!-- end of header -->
 
   <!-- start of main part -->
 
   <main>
-    <h2></h2>
-    <p></p>
+    <h2 class="bio">biography</h2>  
+    <p><img class="imageflottante" src="img/mr.smith.jpg" alt="M.Smith"></p>
+    <p>Nunc suscipit elementum ipsum, eget ornare turpis lobortis quis. Fusce condimentum tristique turpis, ut dignissim elit volutpat eget. Mauris purus lectus, bibendum sit amet congue vel, ultrices sed nisl. Praesent sit amet erat vitae purus varius gravida eget at eros. Nunc rhoncus egestas justo quis pharetra. Proin condimentum pellentesque dolor, eget mollis nunc congue at. Praesent magna felis, egestas scelerisque semper id, aliquet commodo est. Nunc sed leo at turpis vulputate mattis. Mauris feugiat, libero vel faucibus commodo, mi arcu commodo ante, non sodales sem nisi sit amet risus. Aenean id varius ex, a dapibus nibh. Donec sed tincidunt lacus. Suspendisse luctus, odio eget tempor laoreet, ipsum sapien commodo ex, quis bibendum turpis lacus in quam. Nulla nisi ex, viverra porttitor turpis id, euismod tempor erat.</p>
+    <p>Aenean odio arcu, condimentum sed facilisis quis, facilisis vel ex. Donec eget tincidunt dui. Nullam eget elit eu leo ullamcorper semper id vitae tortor. Vivamus vehicula varius magna, quis semper dolor venenatis nec. Integer eu enim vel ex vehicula gravida. Aliquam et mauris vel tellus cursus rhoncus lobortis quis ante. Vestibulum egestas augue elit, ut porttitor dolor dignissim at. Vestibulum nec ultrices risus, a dignissim felis. Sed egestas risus quam, ultrices blandit ex condimentum non. Donec eget vehicula mauris. Donec vel augue pretium, congue nisi ut, sodales ex. In hac habitasse platea dictumst. Nullam est erat, eleifend nec massa ac, viverra rhoncus tellus. Sed vel porttitor ligula. Ut eu faucibus dolor, ut pretium magna.</p>
+    <p>Vivamus vel porta odio, a euismod elit. Sed eget dolor augue. Etiam vel leo vel nisi fermentum dapibus at vel lacus. Suspendisse a diam a tellus venenatis tristique. Mauris vehicula sed risus ac fringilla. Sed eu semper neque. Etiam eu tincidunt purus. Proin mattis ex at purus congue, vel malesuada tellus sodales.</p>
+    <p>Sed pulvinar augue egestas ipsum imperdiet tempor. Ut in est aliquet, pharetra dui nec, dapibus sapien. Etiam a convallis erat. Quisque ac metus vitae sem sagittis hendrerit eu sed nisl. Sed auctor condimentum neque et elementum. Maecenas finibus, tellus sit amet luctus malesuada, odio massa pellentesque tortor, et porta mauris mi et velit. Proin interdum egestas arcu, id aliquet est fringilla id. Aenean congue dolor et purus vulputate blandit. Sed hendrerit sollicitudin odio quis bibendum. Suspendisse potenti. Sed ac lacus metus. Sed odio purus, faucibus a neque laoreet, laoreet volutpat sapien. Proin vitae nisl quis elit tincidunt scelerisque.</p>
+    <p>Mauris semper leo ac arcu lobortis dapibus. Phasellus orci ligula, dignissim vel faucibus sed, egestas vitae sapien. Curabitur lacinia elit eu ex aliquam, in placerat tellus placerat. Aenean quis nulla arcu. Maecenas vestibulum nisl vitae felis consequat mollis. Sed nec arcu ac arcu blandit commodo. Curabitur dapibus massa ut metus tempus, at scelerisque purus aliquet. Donec vel diam nulla.</p>
+    <p>Morbi volutpat leo ex, id eleifend orci vulputate eu. Fusce nec tortor lobortis, maximus risus a, varius nulla. Fusce porttitor consectetur quam, in imperdiet erat tempor pharetra. Suspendisse consectetur ultrices neque, ut tempor felis mattis eu. Ut placerat massa sit amet erat placerat, aliquam luctus tortor rhoncus. In ac rhoncus ligula. In mollis, nibh id tincidunt venenatis, massa ipsum mollis dolor, euismod sagittis leo ipsum non enim. Aliquam erat volutpat. Cras ligula nunc, egestas at leo non, feugiat bibendum neque. Nulla quis commodo elit. Vivamus ac mi ipsum. Nulla fringilla ex at ante vulputate, et facilisis leo volutpat. Sed vehicula, turpis vel mattis fringilla, dui lectus semper libero, quis viverra nunc augue a lacus.</p>
+    <p>Nam pulvinar magna risus, vitae lobortis ligula gravida ac. Donec fringilla est quis faucibus vulputate. Donec sem est, semper nec faucibus nec, egestas sit amet leo. Morbi gravida tempor luctus. Duis sem lorem, cursus vitae felis id, tincidunt dapibus est. Aenean sem urna, tristique ac nisl sit amet, congue rhoncus est. Donec gravida accumsan eros eget pharetra. Etiam convallis euismod erat sagittis fringilla. Pellentesque dapibus a ligula non porta. Morbi congue velit nec risus consequat commodo.</p>
+    <p>Ut ultricies urna et purus eleifend, vel maximus felis rutrum. Duis nulla felis, eleifend aliquet ligula ut, gravida feugiat ex. Integer felis eros, placerat sit amet velit at, lacinia consectetur augue. In hac habitasse platea dictumst. Etiam commodo convallis gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec mi tellus, lobortis sit amet urna sed, tincidunt mollis arcu. Donec enim ipsum, sollicitudin ut sem et, hendrerit semper leo. Sed non augue aliquam, lobortis tortor sed, blandit nunc. Curabitur sodales libero non tellus scelerisque, a ornare lectus convallis. Phasellus hendrerit ullamcorper nisi, ac pretium nunc fringilla vitae. In at nibh dolor. Pellentesque commodo rutrum ipsum, sagittis aliquam ante lacinia id. Maecenas quis erat ac arcu porttitor auctor. Integer fringilla suscipit mauris, fringilla imperdiet magna pellentesque vitae.</p>
+    
   </main>
 
   <!-- end of main part -->
