--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
     </nav>
 
-    <section>
+    <section class="ligne">
       <div>
         <img src="img/logo smith.png" alt="le logo du site">
       </div>
@@ -45,15 +45,16 @@
 
   <!-- start of main part -->
 
-  <main>
+  <main class="mainp1">
     <article class="ban">
       <div class="word">
-        <h2>Welcome to my world!</h2>
+        <h2 class="welcome">Welcome to my world!</h2>
         <p>If you ever try to decrypt it, take the white pill it's doliprane... You're gonna need it.</p>
       </div>
       <a href="article.html"><img id="ban1" src="img/ban1.jpg" alt="banniere rabbit"></a>
       <a href="article.html"><img id="ban2" src="img/ban2.jpg" alt="banniere door"></a>
       <a href="article.html"><img id="ban3" src="img/ban3.jpg" alt="banniere smith"></a> 
+      <a href="biographie.html"><img id="ban4" src="img/biography.jpg" alt="banniere biography"></a>
     </article>      
   </main>
 
