change bouton in html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img class="img" src="img/chemin3.jpg" alt="A path ">
             <p>There's a difference between knowing the path and walking the path</p>
             <div>
-              <a class="btn" href="article.html">open!<i class="fas fa-key"></i></a>
+              <a class="btn" href="article.html">open <i class="fas fa-key"></i></a>
             </div>
           </article>
           <article class="blogArticle textCenter">
@@ -73,7 +73,7 @@
             <img class="img" src="img/matrix3.jpg" alt="falling code">
             <p>Human beings are a disease. A cancer of this planet. You are plague. And we are the cure.</p>
             <div>
-              <a class="btn" href="article.html">open!<i class="fas fa-key"></i></a>
+              <a class="btn" href="article.html">open <i class="fas fa-key"></i></a>
             </div>
           </article>
           <article class="blogArticle textCenter">
@@ -81,7 +81,7 @@
             <img class="img" src="img/bill.jpg" alt="neo">
             <p>Still don't recognize me?</br> I admit it is difficult to even think encased in this rotting piece of meat.</br> The stink of it filling every breath, a suffocating cloud you can't escape.</br> Disgusting.<br> Look at how pathetically fragile it is.</br> Nothing this weak is meant to survive</p>
             <div>
-              <a class="btn" href="article.html">open!<i class="fas fa-key"></i></a>
+              <a class="btn" href="article.html">open  <i class="fas fa-key"></i></a>
             </div>
           </article>
         </div>
