--- a/biographie.html
+++ b/biographie.html
@@ -32,10 +32,11 @@
         <li><a href="biographie.html"><i class="fas fa-user-circle"></i>BIOGRAPHY</a></li>
       </ul>
       <aside>
-        <a href="#">SUBSCRIBE NOW</a>
+        <a href="inscription.html">SUBSCRIBE NOW</a>
         <a href="#">LOG IN</a>
       </aside>
     </nav>
+  </header>
 
   <!-- end of header -->
 
@@ -43,7 +44,7 @@
 
   <main>
     <h2 class="bio">biography</h2>
-    <div class="container" >
+    <div class="container">
     <p><img class="imageflottante" src="img/mr.smith.jpg" alt="M.Smith"></p>
     <p>Nunc suscipit elementum ipsum, eget ornare turpis lobortis quis. Fusce condimentum tristique turpis, ut dignissim elit volutpat eget. Mauris purus lectus, bibendum sit amet congue vel, ultrices sed nisl. Praesent sit amet erat vitae purus varius gravida eget at eros. Nunc rhoncus egestas justo quis pharetra. Proin condimentum pellentesque dolor, eget mollis nunc congue at. Praesent magna felis, egestas scelerisque semper id, aliquet commodo est. Nunc sed leo at turpis vulputate mattis. Mauris feugiat, libero vel faucibus commodo, mi arcu commodo ante, non sodales sem nisi sit amet risus. Aenean id varius ex, a dapibus nibh. Donec sed tincidunt lacus. Suspendisse luctus, odio eget tempor laoreet, ipsum sapien commodo ex, quis bibendum turpis lacus in quam. Nulla nisi ex, viverra porttitor turpis id, euismod tempor erat.</p>
     <p>Aenean odio arcu, condimentum sed facilisis quis, facilisis vel ex. Donec eget tincidunt dui. Nullam eget elit eu leo ullamcorper semper id vitae tortor. Vivamus vehicula varius magna, quis semper dolor venenatis nec. Integer eu enim vel ex vehicula gravida. Aliquam et mauris vel tellus cursus rhoncus lobortis quis ante. Vestibulum egestas augue elit, ut porttitor dolor dignissim at. Vestibulum nec ultrices risus, a dignissim felis. Sed egestas risus quam, ultrices blandit ex condimentum non. Donec eget vehicula mauris. Donec vel augue pretium, congue nisi ut, sodales ex. In hac habitasse platea dictumst. Nullam est erat, eleifend nec massa ac, viverra rhoncus tellus. Sed vel porttitor ligula. Ut eu faucibus dolor, ut pretium magna.</p>
@@ -66,7 +67,7 @@
       <li><a href="https://github.com/duponcheel-quentin" class="reseaux github"><i class="fab fa-github"></i></a></li>
       <li><a href="https://www.linkedin.com/in/quentin-duponcheel-091951164" class="reseaux linkedin"><i class="fab fa-linkedin-in"></i></a></li>
     </ul>
-      <p class="Email">Contact:<a href="mailto:duponcheelquentin.pro@gmail.com" title="Email">duponcheelquentin.pro@gmail.com</a></p>
+      <p class="Email">Contact :<a href="mailto:duponcheelquentin.pro@gmail.com" title="Email">duponcheelquentin.pro@gmail.com</a></p>
   </footer>
 
   <!-- end of footer part -->
