--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="biographie.html"><i class="fas fa-user-circle"></i>BIOGRAPHY</a></li>
       </ul>
       <aside>
-        <a href="#">SUBSCRIBE NOW</a>
+        <a href="inscription.html">SUBSCRIBE NOW</a>
         <a href="#">LOG IN</a>
       </aside>
     </nav>
@@ -98,7 +98,7 @@
       <li><a href="https://github.com/duponcheel-quentin" class="reseaux github"><i class="fab fa-github"></i></a></li>
       <li><a href="https://www.linkedin.com/in/quentin-duponcheel-091951164" class="reseaux linkedin"><i class="fab fa-linkedin-in"></i></a></li>
     </ul>
-      <p class="Email">Contact:<a href="mailto:duponcheelquentin.pro@gmail.com" title="Email">duponcheelquentin.pro@gmail.com</a></p>
+      <p class="Email">Contact :<a href="mailto:duponcheelquentin.pro@gmail.com" title="Email">duponcheelquentin.pro@gmail.com</a></p>
   </footer>
 
   <!-- end of footer part -->
